wiLink 0.9.0 (UNRELEASED)
 * Merge photo uploads and diagnostics into the main window.
 * Add a menu to the chat window instead of the system tray icon.
 * Make it possible to access Picasa photo albums.
 * Fix "Send a file" dialog disappearing when a message is received.
 * Notify user when a message is received in a private chatroom.
 * Make it possible to copy only part of a message.

wiLink 0.8.0 (2010-05-03)
 * Rename wDesktop to wiLink.
 * Improve file transfer support.
 * Add file sharing application.
 * Change the default download directory to "Downloads" on Windows.
 * Move wallet to application data directory.
 * Add a link from roster to a user's web page.
 * Make it possible to rename chat contacts.
 * Treat Enter and Return keys the same way in chat input.
 * Make it possible to change users by removing main chat account.
 * Make "copy" available using right-click in chat history.
 * Don't copy message sender when copying text from a single person.
 * Make it possible to select entire chat history.
 * Mark users as away after 5 minutes of inactivity.
 * Resize photos to a maximum of 2048 x 2048 before upload.
 * Fix photo upload progress bar, really reaches 100% upon completion.

wDesktop 0.7.0 (2010-03-10)
 * Add support for chat state notifications.
 * Add support for file transfers.
 * Notify the user when he cannot join a chat room or gets kicked out.
 * Make it possible to manage chat room properties.
 * Make it possible to kick users out of chat rooms.
 * Make it possible to manage chat room members.
 * Add unit for RSSI measurements.
 * Make it possible to add additional chat accounts.
 * Report software version via chat.
 * Use operating system's native icon for folders.
 * Make it possible to view fullsize version of photos.
 * Add keyboard shortcuts for navigating photos.

wDesktop 0.6.1 (2010-02-15)
 * Improve auto-expanding of chat rooms.
 * Parse the timestamp of chat room messages.
 * Close connection to chat server on exit.